--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         <h3>💖 樂樂的聖誕奇蹟：請留下你的專屬幸運號！</h3>
         
         <div class="google-form-embed">
-            <iframe src="[https://docs.google.com/forms/d/e/1FAIpQLSeqQg-41hebxoGKsyE6IA7f6ucYEKnBz2uuU7z2dQ8a0Hi3BA/viewform?usp=publish-editor]" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeqQg-41hebxoGKsyE6IA7f6ucYEKnBz2uuU7z2dQ8a0Hi3BA/viewform?embedded=true" 
+                width="100%" 
+                height="600" 
+                frameborder="0" 
+                marginheight="0" 
+                marginwidth="0">
+                載入中…
+            </iframe>
         </div>
 
         <button class="cta-button">🚀 釋放我的聖誕樂樂！立即參加抽獎！</button>
